# UBER-Business-Analyst-

./: 01_data_exploration_cleaning.py  01_data_processing_and_training.py  02_exploratory_data_analysis.py  03_business_intelligence_dashboard.py  04_advanced_analytics.py  05_business_insights.py  AZURE_ML_DEPLOYMENT_GUIDE.md  README.md  index.html  pyproject.toml  requirements.txt  test_training_workflow.py
output/eda/: eda_report.txt
