[project]
name = "uber-ride-analytics"
version = "0.1.0"
description = "Professional Uber Ride Analytics Dataset 2024 - Data Cleaning, EDA, BI Dashboard, and Advanced Analytics"
requires-python = ">=3.8"
dependencies = [
    "altair>=5.4.1",
    "bokeh>=3.1.1",
    "catboost>=1.2.8",
    "celery>=5.5.3",
    "click>=8.1.8",
    "configparser>=7.1.0",
    "dash>=3.2.0",
    "dash-bootstrap-components>=1.6.0",
    "dask>=2023.5.0",
    "fastapi>=0.116.1",
    "folium>=0.18.0",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.7.5",
    "mlflow>=2.17.2",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.0.3",
    "pandera>=0.22.1",
    "plotly>=6.3.0",
    "prefect>=2.20.10",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "redis>=6.1.1",
    "rich>=13.9.4",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.35",
    "statsmodels>=0.14.1",
    "streamlit>=1.40.1",
    "tensorflow>=2.9.0",
    "textblob>=0.18.0.post0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "wordcloud>=1.9.4",
    "xgboost>=2.1.4",
    "xlsxwriter>=3.2.5",
]

[tool.uv]
dev-dependencies = []
